--- a/CADIR.html
+++ b/CADIR.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cadir - pILOTAGE D4UN 2TABLISSEMENT</title>
+    <title>CADIR - Pilotage d'un établissement</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,500;9..40,600;9..40,700&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
@@ -661,7 +661,7 @@
         perdir: { label:'PERDIR', sublabel:'Direction', icon:'fas fa-building-columns', color:'var(--c-info)' },
         exam:   { label:'EXAM',   sublabel:'Épreuves', icon:'fas fa-file-pen', color:'var(--c-accent)' },
         oral:   { label:'ORAL',   sublabel:'Oraux', icon:'fas fa-comments', color:'var(--c-warning)' },
-        aed:    { label:'Aoiuoiuoiu',    sublabel:'Vie Scolaire', icon:'fas fa-user-shield', color:'var(--c-success)' },
+        aed:    { label:'AED',    sublabel:'Vie Scolaire', icon:'fas fa-user-shield', color:'var(--c-success)' },
         data:   { label:'DONNÉES', sublabel:'Import', icon:'fas fa-database', color:'var(--c-purple)' },
         bibase: { label:'BULLETIN', sublabel:'Information', icon:'fas fa-newspaper', color:'#e67e22' },
     };
