--- a/CADIR.html
+++ b/CADIR.html
@@ -57,6 +57,7 @@
         .nav-item[data-module="oral"] .nav-badge { background:var(--c-warning); color:#fff; }
         .nav-item[data-module="aed"] .nav-badge { background:var(--c-success); color:#fff; }
             [data-module="bibase"] .nav-badge { background:#e67e22; color:#fff; }
+        .nav-item[data-module="dhg"] .nav-badge { background:#16a34a; color:#fff; }
         .nav-item[data-module="data"] .nav-badge { background:var(--c-purple); color:#fff; }
         .nav-right { margin-left:auto; display:flex; align-items:center; gap:8px; }
         .nav-clock { color:var(--c-text-dim); font-size:0.75rem; font-variant-numeric:tabular-nums; }
@@ -223,6 +224,7 @@
         .module-card[data-m="oral"]::before { background:var(--c-warning); }
         .module-card[data-m="aed"]::before { background:var(--c-success); }
         .module-card[data-m="bibase"]::before { background:#e67e22; }
+        .module-card[data-m="dhg"]::before { background:#16a34a; }
             .module-card[data-m="data"]::before { background:var(--c-purple); }
         .module-icon { width:44px; height:44px; border-radius:11px; display:flex; align-items:center; justify-content:center; font-size:1.1rem; color:white; margin:0 auto 12px; }
         .module-card[data-m="perdir"] .module-icon { background:var(--c-info); }
@@ -230,6 +232,7 @@
         .module-card[data-m="oral"] .module-icon { background:var(--c-warning); }
         .module-card[data-m="aed"] .module-icon { background:var(--c-success); }
         .module-card[data-m="bibase"] .module-icon { background:#e67e22; }
+        .module-card[data-m="dhg"] .module-icon { background:#16a34a; }
             .module-card[data-m="data"] .module-icon { background:var(--c-purple); }
         .module-card h3 { font-size:0.9rem; font-weight:600; color:var(--c-nav); margin-bottom:4px; }
         .module-card p { font-size:0.7rem; color:#9ca3af; line-height:1.3; }
@@ -259,7 +262,7 @@
             <div class="brand-text">CADIR<span>Suite Direction</span></div>
         </a>
         <div class="nav-sep"></div>
-        <div class="nav-items" id="navItems"><div class="nav-item active" data-module="perdir" onclick="loadModule('perdir')" title="Ctrl+P"><i class="fas fa-building-columns"></i><span class="nav-label">CADIR</span><span class="nav-badge">Direction</span><kbd class="nav-shortcut">Ctrl+P</kbd></div><div class="nav-item" data-module="exam" onclick="loadModule('exam')" title="Ctrl+E"><i class="fas fa-file-pen"></i><span class="nav-label">EXAM</span><span class="nav-badge">Épreuves</span><kbd class="nav-shortcut">Ctrl+E</kbd></div><div class="nav-item" data-module="oral" onclick="loadModule('oral')" title="Ctrl+O"><i class="fas fa-comments"></i><span class="nav-label">ORAL</span><span class="nav-badge">Oraux</span><kbd class="nav-shortcut">Ctrl+O</kbd></div><div class="nav-item" data-module="aed" onclick="loadModule('aed')" title="Ctrl+A"><i class="fas fa-user-shield"></i><span class="nav-label">AED</span><span class="nav-badge">Vie Scolaire</span><kbd class="nav-shortcut">Ctrl+A</kbd></div><div class="nav-item" data-module="bibase" onclick="loadModule('bibase')" title="Ctrl+B"><i class="fas fa-newspaper"></i><span class="nav-label">BULLETIN</span><span class="nav-badge">Information</span><kbd class="nav-shortcut">Ctrl+B</kbd></div><div class="nav-item" data-module="data" onclick="openDataPanel()" title="Ctrl+D"><i class="fas fa-database"></i><span class="nav-label">Données</span><span class="nav-badge">Import</span><kbd class="nav-shortcut">Ctrl+D</kbd></div></div>
+        <div class="nav-items" id="navItems"><div class="nav-item active" data-module="perdir" onclick="loadModule('perdir')" title="Ctrl+P"><i class="fas fa-building-columns"></i><span class="nav-label">CADIR</span><span class="nav-badge">Direction</span><kbd class="nav-shortcut">Ctrl+P</kbd></div><div class="nav-item" data-module="exam" onclick="loadModule('exam')" title="Ctrl+E"><i class="fas fa-file-pen"></i><span class="nav-label">EXAM</span><span class="nav-badge">Épreuves</span><kbd class="nav-shortcut">Ctrl+E</kbd></div><div class="nav-item" data-module="oral" onclick="loadModule('oral')" title="Ctrl+O"><i class="fas fa-comments"></i><span class="nav-label">ORAL</span><span class="nav-badge">Oraux</span><kbd class="nav-shortcut">Ctrl+O</kbd></div><div class="nav-item" data-module="aed" onclick="loadModule('aed')" title="Ctrl+A"><i class="fas fa-user-shield"></i><span class="nav-label">AED</span><span class="nav-badge">Vie Scolaire</span><kbd class="nav-shortcut">Ctrl+A</kbd></div><div class="nav-item" data-module="bibase" onclick="loadModule('bibase')" title="Ctrl+B"><i class="fas fa-newspaper"></i><span class="nav-label">BULLETIN</span><span class="nav-badge">Information</span><kbd class="nav-shortcut">Ctrl+B</kbd></div><div class="nav-item" data-module="dhg" onclick="openDHG()" title="Ctrl+G"><i class="fas fa-chart-bar"></i><span class="nav-label">DHG</span><span class="nav-badge">Budget</span><kbd class="nav-shortcut">Ctrl+G</kbd></div><div class="nav-item" data-module="data" onclick="openDataPanel()" title="Ctrl+D"><i class="fas fa-database"></i><span class="nav-label">Données</span><span class="nav-badge">Import</span><kbd class="nav-shortcut">Ctrl+D</kbd></div></div>
         <div class="nav-right">
             <div class="nav-clock" id="clock">mer. 18 févr., 21:26</div>
             <button class="nav-btn" onclick="openSettings()" title="Paramètres (Alt+P)"><svg id="settings-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" width="16" height="16"><circle cx="12" cy="12" r="3"></circle><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1-2.83 2.83l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-4 0v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83-2.83l.06-.06A1.65 1.65 0 0 0 4.68 15a1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1 0-4h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 2.83-2.83l.06.06A1.65 1.65 0 0 0 9 4.68a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 4 0v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 2.83l-.06.06A1.65 1.65 0 0 0 19.4 9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 0 4h-.09a1.65 1.65 0 0 0-1.51 1z"></path></svg></button>
@@ -605,7 +608,7 @@ fichier JSON contient identité, images, ordre et visibilité des modules.</div>
                 <h1 class="welcome-title">Bienvenue sur CADIR</h1>
                 <p class="welcome-subtitle" id="welcomeSubtitle">Suite d'outils pour la direction d'établissement</p>
             </div>
-            <div class="module-grid" id="moduleGrid"><div class="module-card" data-m="perdir" onclick="loadModule('perdir')"><div class="module-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="22" height="22"><rect x="3" y="10" width="18" height="11" rx="1"></rect><path d="M3 10l9-7 9 7"></path><line x1="12" y1="3" x2="12" y2="10"></line><rect x="7" y="14" width="3" height="7"></rect><rect x="14" y="14" width="3" height="7"></rect></svg></div><h3>CADIR</h3><p>Direction &amp; pilotage</p></div><div class="module-card" data-m="exam" onclick="loadModule('exam')"><div class="module-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="22" height="22"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><path d="M10 9H8"></path></svg></div><h3>EXAM</h3><p>Organisation des épreuves</p></div><div class="module-card" data-m="oral" onclick="loadModule('oral')"><div class="module-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="22" height="22"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg></div><h3>ORAL</h3><p>Gestion des oraux &amp; écrits</p></div><div class="module-card" data-m="aed" onclick="loadModule('aed')"><div class="module-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="22" height="22"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle><path d="M18 8s2 2 0 5"></path></svg></div><h3>AED</h3><p>Assistants d'éducation</p></div><div class="module-card" data-m="bibase" onclick="loadModule('bibase')"><div class="module-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="22" height="22"><path d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a4 4 0 0 1-4-4V6"></path><line x1="16" y1="6" x2="10" y2="6"></line><line x1="16" y1="10" x2="10" y2="10"></line><line x1="16" y1="14" x2="10" y2="14"></line></svg></div><h3>BULLETIN</h3><p>Bulletin d'information</p></div><div class="module-card" data-m="data" onclick="openDataPanel()"><div class="module-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="22" height="22"><ellipse cx="12" cy="5" rx="9" ry="3"></ellipse><path d="M21 12c0 1.66-4 3-9 3s-9-1.34-9-3"></path><path d="M3 5v14c0 1.66 4 3 9 3s9-1.34 9-3V5"></path></svg></div><h3>DONNÉES</h3><p>Import élèves &amp; enseignants</p></div></div>
+            <div class="module-grid" id="moduleGrid"><div class="module-card" data-m="perdir" onclick="loadModule('perdir')"><div class="module-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="22" height="22"><rect x="3" y="10" width="18" height="11" rx="1"></rect><path d="M3 10l9-7 9 7"></path><line x1="12" y1="3" x2="12" y2="10"></line><rect x="7" y="14" width="3" height="7"></rect><rect x="14" y="14" width="3" height="7"></rect></svg></div><h3>CADIR</h3><p>Direction &amp; pilotage</p></div><div class="module-card" data-m="exam" onclick="loadModule('exam')"><div class="module-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="22" height="22"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><path d="M10 9H8"></path></svg></div><h3>EXAM</h3><p>Organisation des épreuves</p></div><div class="module-card" data-m="oral" onclick="loadModule('oral')"><div class="module-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="22" height="22"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg></div><h3>ORAL</h3><p>Gestion des oraux &amp; écrits</p></div><div class="module-card" data-m="aed" onclick="loadModule('aed')"><div class="module-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="22" height="22"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle><path d="M18 8s2 2 0 5"></path></svg></div><h3>AED</h3><p>Assistants d'éducation</p></div><div class="module-card" data-m="bibase" onclick="loadModule('bibase')"><div class="module-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="22" height="22"><path d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a4 4 0 0 1-4-4V6"></path><line x1="16" y1="6" x2="10" y2="6"></line><line x1="16" y1="10" x2="10" y2="10"></line><line x1="16" y1="14" x2="10" y2="14"></line></svg></div><h3>BULLETIN</h3><p>Bulletin d'information</p></div><div class="module-card" data-m="dhg" onclick="openDHG()"><div class="module-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="22" height="22"><line x1="3" y1="3" x2="21" y2="3"></line><line x1="3" y1="7" x2="21" y2="7"></line><line x1="3" y1="11" x2="21" y2="11"></line><rect x="3" y="14" width="4" height="8"></rect><rect x="9" y="10" width="4" height="12"></rect><rect x="15" y="6" width="4" height="16"></rect></svg></div><h3>DHG</h3><p>Gestion du budget</p></div><div class="module-card" data-m="data" onclick="openDataPanel()"><div class="module-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="22" height="22"><ellipse cx="12" cy="5" rx="9" ry="3"></ellipse><path d="M21 12c0 1.66-4 3-9 3s-9-1.34-9-3"></path><path d="M3 5v14c0 1.66 4 3 9 3s9-1.34 9-3V5"></path></svg></div><h3>DONNÉES</h3><p>Import élèves &amp; enseignants</p></div></div>
         </div>
 
         <!-- DATA PANEL -->
@@ -687,18 +690,19 @@ fichier JSON contient identité, images, ordre et visibilité des modules.</div>
     let currentModule = null;
     const loadedModules = new Set();
     const blobUrls = {};
-    const moduleNames = ['perdir','exam','oral','aed','bibase','bibase'];
+    const moduleNames = ['perdir','exam','oral','aed','bibase','dhg','data'];
 
     const MODULE_META = {
         perdir: { label:'PERDIR', sublabel:'Direction', icon:'fas fa-building-columns', color:'var(--c-info)' },
         exam:   { label:'EXAM',   sublabel:'Épreuves', icon:'fas fa-file-pen', color:'var(--c-accent)' },
         oral:   { label:'ORAL',   sublabel:'Oraux', icon:'fas fa-comments', color:'var(--c-warning)' },
         aed:    { label:'AED',    sublabel:'Vie Scolaire', icon:'fas fa-user-shield', color:'var(--c-success)' },
-        data:   { label:'DONNÉES', sublabel:'Import', icon:'fas fa-database', color:'var(--c-purple)' },
         bibase: { label:'BULLETIN', sublabel:'Information', icon:'fas fa-newspaper', color:'#e67e22' },
+        dhg:    { label:'DHG', sublabel:'Budget', icon:'fas fa-chart-bar', color:'#16a34a' },
+        data:   { label:'DONNÉES', sublabel:'Import', icon:'fas fa-database', color:'var(--c-purple)' },
     };
-    const ALL_ITEMS = ['perdir','exam','oral','aed','bibase','data'];
-    const DEFAULT_ORDER = ['perdir','exam','oral','aed','bibase','data'];
+    const ALL_ITEMS = ['perdir','exam','oral','aed','bibase','dhg','data'];
+    const DEFAULT_ORDER = ['perdir','exam','oral','aed','bibase','dhg','data'];
 
     // ═══ EXCEL TEMPLATES ═══
     const TEMPLATES = {
@@ -1653,6 +1657,11 @@ function saveSettings() {
 
     function closeDataPanel() { document.getElementById('dataPanel').classList.remove('active'); }
 
+    // ═══ OUVRIR DHG ═══
+    function openDHG() {
+        window.open('https://cadir26.github.io/CADIR/DGH.htm', 'DHG_Manager', 'width=1200,height=800,resizable=yes,scrollbars=yes');
+    }
+
     // ═══ PUSH TO MODULES ═══
     function pushSettingsToModule(name) {
         const frame = document.getElementById('frame-' + name);
@@ -1713,12 +1722,14 @@ function saveSettings() {
             'o': 'oral',
             'a': 'aed',
             'b': 'bibase',
+            'g': 'dhg',
             'd': 'data'
         };
         if (map[key]) {
             e.preventDefault();
             e.stopPropagation();
-            loadModule(map[key]);
+            if (map[key] === 'dhg') openDHG();
+            else loadModule(map[key]);
         }
     });
 
