--- a/CADIR_DHG_FUSION.html
+++ b/CADIR_DHG_FUSION.html
@@ -286,6 +286,32 @@
         .home-ev-cal{color:#94a3b8;font-size:.72rem;font-weight:800;margin-top:2px;}
         .home-ev-empty{grid-column:1/-1;background:#fff;border:1px dashed rgba(0,0,0,.15);border-radius:14px;padding:14px;color:#64748b;font-weight:900;}
 
+
+/* --- PATCH UI: align accordion sections (incl. Bulletin) --- */
+#settingsModal .acc-section{ margin: 10px 14px; }
+#settingsModal .acc-section:last-child{ margin-bottom: 14px; }
+#settingsModal .acc-header{ width:100%; }
+#settingsModal .acc-body{ width:100%; }
+
+/* --- Home calendar blocks --- */
+.home-calwrap{ margin-top:16px; background:#fff; border:1px solid #e5e7eb; border-radius:18px; overflow:hidden; box-shadow:0 10px 30px rgba(2,8,23,.06);}
+.home-calhead{ display:flex; align-items:center; justify-content:space-between; padding:14px 16px; background:linear-gradient(180deg,#ffffff,#f8fafc); border-bottom:1px solid #eef2f7;}
+.home-calhead .ttl{ font-weight:800; color:#0f172a; display:flex; align-items:center; gap:10px;}
+.home-calgrid{ display:grid; grid-template-columns:repeat(2,minmax(0,1fr)); gap:12px; padding:14px 16px;}
+@media(max-width:900px){ .home-calgrid{ grid-template-columns:1fr; } }
+.home-calcard{ border:1px solid #eef2f7; border-radius:16px; padding:12px 12px; background:#fff; position:relative; overflow:hidden;}
+.home-calcard:before{ content:''; position:absolute; inset:0; background:radial-gradient(600px 200px at 0% 0%, rgba(56,189,248,.10), transparent 60%); opacity:0; transition:opacity .25s ease; }
+.home-calcard:hover:before{ opacity:1; }
+.home-calcard h4{ margin:0 0 8px; font-size:.92rem; font-weight:800; display:flex; align-items:center; gap:8px; color:#0f172a;}
+.home-calcard h4 .dot{ width:10px; height:10px; border-radius:99px; display:inline-block; }
+.home-calev{ display:flex; gap:10px; padding:8px 8px; border-radius:12px; transition:transform .18s ease, background .18s ease; }
+.home-calev:hover{ transform:translateY(-1px); background:#f8fafc; }
+.home-calev + .home-calev{ border-top:1px dashed #eef2f7; }
+.home-calev .when{ width:92px; flex:0 0 92px; font-weight:800; color:#0f172a; font-size:.78rem; }
+.home-calev .meta{ min-width:0; }
+.home-calev .meta .t{ font-weight:700; color:#0f172a; font-size:.84rem; white-space:nowrap; overflow:hidden; text-overflow:ellipsis;}
+.home-calev .meta .s{ font-size:.72rem; color:#64748b; white-space:nowrap; overflow:hidden; text-overflow:ellipsis;}
+.home-calempty{ padding:14px 16px; color:#64748b; font-weight:600; }
 </style>
     <script src="CADIR_fichiers/client" async="" defer="defer"></script>
 <style id="googleidentityservice_button_styles">.qJTHM{-moz-user-select:none;-webkit-user-select:none;-ms-user-select:none;color:#202124;direction:ltr;-webkit-touch-callout:none;font-family:"Roboto-Regular",arial,sans-serif;-webkit-font-smoothing:antialiased;font-weight:400;margin:0;overflow:hidden;-webkit-text-size-adjust:100%}.ynRLnc{left:-9999px;position:absolute;top:-9999px}.L6cTce{display:none}.bltWBb{overflow-wrap:break-word;word-break:break-word}.hSRGPd{color:#1a73e8;cursor:pointer;font-weight:500;text-decoration:none}.Bz112c-W3lGp{height:16px;width:16px}.Bz112c-E3DyYd{height:20px;width:20px}.Bz112c-r9oPif{height:24px;width:24px}.Bz112c-u2z5K{height:36px;width:36px}.Bz112c-uaxL4e{border-radius:10px}.LgbsSe-Bz112c{display:block}.S9gUrf-YoZ4jf{border:none;margin:0;padding:0}.S9gUrf-YoZ4jf *{border:none;margin:0;padding:0}.fFW7wc-ibnC6b>.aZ2wEe>div{border-color:#4285f4}.P1ekSe-ZMv3u{transition:height linear .2s}.P1ekSe-ZMv3u>div:nth-child(1){background-color:#1a73e8!important;transition:width linear .3s}.P1ekSe-ZMv3u>div:nth-child(2){background-image:linear-gradient(to right,rgba(255,255,255,.7),rgba(255,255,255,.7)),linear-gradient(to right,#1a73e8,#1a73e8)!important}.P1ekSe-ZMv3u>div:nth-child(3){background-image:linear-gradient(to right,rgba(255,255,255,.7),rgba(255,255,255,.7)),linear-gradient(to right,#1a73e8,#1a73e8)!important}.haAclf{display:inline-block}.nsm7Bb-HzV7m-LgbsSe{border-radius:4px;-moz-box-sizing:border-box;box-sizing:border-box;transition:background-color .218s,border-color .218s;-moz-user-select:none;-webkit-user-select:none;-ms-user-select:none;-webkit-appearance:none;background-color:#fff;background-image:none;border:1px solid #dadce0;color:#3c4043;cursor:pointer;font-family:"Google Sans",arial,sans-serif;font-size:14px;height:40px;letter-spacing:.25px;outline:none;overflow:hidden;padding:0 12px;position:relative;text-align:center;vertical-align:middle;white-space:nowrap;width:auto}@media screen and (-ms-high-contrast:active){.nsm7Bb-HzV7m-LgbsSe{border:2px solid windowText;color:windowText}}@media screen and (preferes-contrast:more){.nsm7Bb-HzV7m-LgbsSe{color:#000}}.nsm7Bb-HzV7m-LgbsSe.pSzOP-SxQuSe{font-size:14px;height:32px;letter-spacing:.25px;padding:0 10px}.nsm7Bb-HzV7m-LgbsSe.purZT-SxQuSe{font-size:11px;height:20px;letter-spacing:.3px;padding:0 8px}.nsm7Bb-HzV7m-LgbsSe.Bz112c-LgbsSe{padding:0;width:40px}.nsm7Bb-HzV7m-LgbsSe.Bz112c-LgbsSe.pSzOP-SxQuSe{width:32px}.nsm7Bb-HzV7m-LgbsSe.Bz112c-LgbsSe.purZT-SxQuSe{width:20px}.nsm7Bb-HzV7m-LgbsSe.JGcpL-RbRzK{border-radius:20px}.nsm7Bb-HzV7m-LgbsSe.JGcpL-RbRzK.pSzOP-SxQuSe{border-radius:16px}.nsm7Bb-HzV7m-LgbsSe.JGcpL-RbRzK.purZT-SxQuSe{border-radius:10px}.nsm7Bb-HzV7m-LgbsSe.MFS4be-Ia7Qfc{border:none;color:#fff}.nsm7Bb-HzV7m-LgbsSe.MFS4be-v3pZbf-Ia7Qfc{background-color:#1a73e8}.nsm7Bb-HzV7m-LgbsSe.MFS4be-JaPV2b-Ia7Qfc{background-color:#202124;color:#e8eaed}@media screen and (prefers-contrast:more){.nsm7Bb-HzV7m-LgbsSe.MFS4be-JaPV2b-Ia7Qfc{color:#fff}}.nsm7Bb-HzV7m-LgbsSe .nsm7Bb-HzV7m-LgbsSe-Bz112c{height:18px;margin-right:8px;min-width:18px;width:18px}.nsm7Bb-HzV7m-LgbsSe.pSzOP-SxQuSe .nsm7Bb-HzV7m-LgbsSe-Bz112c{height:14px;min-width:14px;width:14px}.nsm7Bb-HzV7m-LgbsSe.purZT-SxQuSe .nsm7Bb-HzV7m-LgbsSe-Bz112c{height:10px;min-width:10px;width:10px}.nsm7Bb-HzV7m-LgbsSe.jVeSEe .nsm7Bb-HzV7m-LgbsSe-Bz112c{margin-left:8px;margin-right:-4px}.nsm7Bb-HzV7m-LgbsSe.Bz112c-LgbsSe .nsm7Bb-HzV7m-LgbsSe-Bz112c{margin:0;padding:10px}.nsm7Bb-HzV7m-LgbsSe.Bz112c-LgbsSe.pSzOP-SxQuSe .nsm7Bb-HzV7m-LgbsSe-Bz112c{padding:8px}.nsm7Bb-HzV7m-LgbsSe.Bz112c-LgbsSe.purZT-SxQuSe .nsm7Bb-HzV7m-LgbsSe-Bz112c{padding:4px}.nsm7Bb-HzV7m-LgbsSe .nsm7Bb-HzV7m-LgbsSe-Bz112c-haAclf{border-top-left-radius:3px;border-bottom-left-radius:3px;display:-moz-box;display:flex;-moz-box-pack:center;justify-content:center;-moz-box-align:center;align-items:center;background-color:#fff;height:36px;margin-left:-10px;margin-right:12px;min-width:36px;width:36px}.nsm7Bb-HzV7m-LgbsSe .nsm7Bb-HzV7m-LgbsSe-Bz112c-haAclf .nsm7Bb-HzV7m-LgbsSe-Bz112c,.nsm7Bb-HzV7m-LgbsSe.Bz112c-LgbsSe .nsm7Bb-HzV7m-LgbsSe-Bz112c-haAclf .nsm7Bb-HzV7m-LgbsSe-Bz112c{margin:0;padding:0}.nsm7Bb-HzV7m-LgbsSe.pSzOP-SxQuSe .nsm7Bb-HzV7m-LgbsSe-Bz112c-haAclf{height:28px;margin-left:-8px;margin-right:10px;min-width:28px;width:28px}.nsm7Bb-HzV7m-LgbsSe.purZT-SxQuSe .nsm7Bb-HzV7m-LgbsSe-Bz112c-haAclf{height:16px;margin-left:-6px;margin-right:8px;min-width:16px;width:16px}.nsm7Bb-HzV7m-LgbsSe.Bz112c-LgbsSe .nsm7Bb-HzV7m-LgbsSe-Bz112c-haAclf{border-radius:3px;margin-left:2px;margin-right:0;padding:0}.nsm7Bb-HzV7m-LgbsSe.JGcpL-RbRzK .nsm7Bb-HzV7m-LgbsSe-Bz112c-haAclf{border-radius:18px}.nsm7Bb-HzV7m-LgbsSe.pSzOP-SxQuSe.JGcpL-RbRzK .nsm7Bb-HzV7m-LgbsSe-Bz112c-haAclf{border-radius:14px}.nsm7Bb-HzV7m-LgbsSe.purZT-SxQuSe.JGcpL-RbRzK .nsm7Bb-HzV7m-LgbsSe-Bz112c-haAclf{border-radius:8px}.nsm7Bb-HzV7m-LgbsSe .nsm7Bb-HzV7m-LgbsSe-bN97Pc-sM5MNb{display:-moz-box;display:flex;-moz-box-align:center;align-items:center;-moz-box-orient:horizontal;-moz-box-direction:normal;flex-direction:row;-moz-box-pack:justify;justify-content:space-between;flex-wrap:nowrap;height:100%;position:relative;width:100%}.nsm7Bb-HzV7m-LgbsSe .oXtfBe-l4eHX{-moz-box-pack:center;justify-content:center}.nsm7Bb-HzV7m-LgbsSe .nsm7Bb-HzV7m-LgbsSe-BPrWId{-moz-box-flex:1;flex-grow:1;font-family:"Google Sans",arial,sans-serif;font-weight:500;overflow:hidden;text-overflow:ellipsis;vertical-align:top}.nsm7Bb-HzV7m-LgbsSe.purZT-SxQuSe .nsm7Bb-HzV7m-LgbsSe-BPrWId{font-weight:300}.nsm7Bb-HzV7m-LgbsSe .oXtfBe-l4eHX .nsm7Bb-HzV7m-LgbsSe-BPrWId{-moz-box-flex:0;flex-grow:0}.nsm7Bb-HzV7m-LgbsSe .nsm7Bb-HzV7m-LgbsSe-MJoBVe{transition:background-color .218s;bottom:0;left:0;position:absolute;right:0;top:0}.nsm7Bb-HzV7m-LgbsSe:hover,.nsm7Bb-HzV7m-LgbsSe:focus{box-shadow:none;border-color:rgb(210,227,252);outline:none}.nsm7Bb-HzV7m-LgbsSe:focus-within{outline:2px solid #00639b;border-color:transparent}.nsm7Bb-HzV7m-LgbsSe:hover .nsm7Bb-HzV7m-LgbsSe-MJoBVe{background:rgba(66,133,244,.08)}.nsm7Bb-HzV7m-LgbsSe:active .nsm7Bb-HzV7m-LgbsSe-MJoBVe,.nsm7Bb-HzV7m-LgbsSe:focus .nsm7Bb-HzV7m-LgbsSe-MJoBVe{background:rgba(66,133,244,.1)}.nsm7Bb-HzV7m-LgbsSe.MFS4be-Ia7Qfc:hover .nsm7Bb-HzV7m-LgbsSe-MJoBVe{background:rgba(255,255,255,.24)}.nsm7Bb-HzV7m-LgbsSe.MFS4be-Ia7Qfc:active .nsm7Bb-HzV7m-LgbsSe-MJoBVe,.nsm7Bb-HzV7m-LgbsSe.MFS4be-Ia7Qfc:focus .nsm7Bb-HzV7m-LgbsSe-MJoBVe{background:rgba(255,255,255,.32)}.nsm7Bb-HzV7m-LgbsSe .n1UuX-DkfjY{border-radius:50%;display:-moz-box;display:flex;height:20px;margin-left:-4px;margin-right:8px;min-width:20px;width:20px}.nsm7Bb-HzV7m-LgbsSe.jVeSEe .nsm7Bb-HzV7m-LgbsSe-BPrWId{font-family:"Roboto";font-size:12px;text-align:left}.nsm7Bb-HzV7m-LgbsSe.jVeSEe .nsm7Bb-HzV7m-LgbsSe-BPrWId .ssJRIf,.nsm7Bb-HzV7m-LgbsSe.jVeSEe .nsm7Bb-HzV7m-LgbsSe-BPrWId .K4efff .fmcmS{overflow:hidden;text-overflow:ellipsis}.nsm7Bb-HzV7m-LgbsSe.jVeSEe .nsm7Bb-HzV7m-LgbsSe-BPrWId .K4efff{display:-moz-box;display:flex;-moz-box-align:center;align-items:center;color:#5f6368;fill:#5f6368;font-size:11px;font-weight:400}.nsm7Bb-HzV7m-LgbsSe.jVeSEe.MFS4be-Ia7Qfc .nsm7Bb-HzV7m-LgbsSe-BPrWId .K4efff{color:#e8eaed;fill:#e8eaed}@media screen and (prefers-contrast:more){.nsm7Bb-HzV7m-LgbsSe.jVeSEe .nsm7Bb-HzV7m-LgbsSe-BPrWId .K4efff,.nsm7Bb-HzV7m-LgbsSe.jVeSEe.MFS4be-Ia7Qfc .nsm7Bb-HzV7m-LgbsSe-BPrWId .K4efff{color:#000;fill:#000}}.nsm7Bb-HzV7m-LgbsSe.jVeSEe .nsm7Bb-HzV7m-LgbsSe-BPrWId .K4efff .Bz112c{height:18px;margin:-3px -3px -3px 2px;min-width:18px;width:18px}.nsm7Bb-HzV7m-LgbsSe.jVeSEe .nsm7Bb-HzV7m-LgbsSe-Bz112c-haAclf{border-top-left-radius:0;border-bottom-left-radius:0;border-top-right-radius:3px;border-bottom-right-radius:3px;margin-left:12px;margin-right:-10px}.nsm7Bb-HzV7m-LgbsSe.jVeSEe.JGcpL-RbRzK .nsm7Bb-HzV7m-LgbsSe-Bz112c-haAclf{border-radius:18px}.L5Fo6c-sM5MNb{border:0;display:block;left:0;position:relative;top:0}.L5Fo6c-bF1uUb{border-radius:4px;bottom:0;cursor:pointer;left:0;position:absolute;right:0;top:0}.L5Fo6c-bF1uUb:focus{border:none;outline:none}sentinel{}</style></head>
@@ -654,6 +680,19 @@ fichier JSON contient identité, images, ordre et visibilité des modules.</div>
                 </div>
                 <div class="home-events-body" id="homeEventsBody"></div>
             </div>
+
+
+            <div class="home-calwrap" id="homeUpcomingWrap">
+                <div class="home-calhead">
+                    <div class="ttl"><i class="fas fa-calendar-week"></i> Prochaines 2 semaines (par agenda)</div>
+                    <div class="home-events-actions">
+                        <button class="home-events-btn" onclick="renderHomeUpcoming2Weeks()" title="Rafraîchir l'affichage"><i class="fas fa-rotate"></i> Rafraîchir</button>
+                    </div>
+                </div>
+                <div class="home-calgrid" id="homeUpcomingGrid"></div>
+                <div class="home-calempty" id="homeUpcomingEmpty" style="display:none;"></div>
+            </div>
+
 
         </div>
 
@@ -1165,7 +1204,7 @@ function saveSettings() {
 
             statusEl.innerHTML = '<span style="color:#34a853;"><i class="fas fa-check"></i> ' + events.length + ' \u00e9v\u00e9nement(s) synchronis\u00e9(s)</span>';
             pushGcalToModules();
-            try{ renderHomeTodayEvents(); }catch(e){}
+            try{ renderHomeTodayEvents(); }catch(e){} try{ renderHomeUpcoming2Weeks(); }catch(e){}
         });
     }
 
@@ -1272,7 +1311,7 @@ function saveSettings() {
 
             statusEl.innerHTML = '<span style="color:#0078d4"><i class="fas fa-check"></i> '+events.length+' événement(s)</span>';
             pushOutlookToModules();
-            try{ renderHomeTodayEvents(); }catch(e){}
+            try{ renderHomeTodayEvents(); }catch(e){} try{ renderHomeUpcoming2Weeks(); }catch(e){}
         });
     }
 
@@ -1292,7 +1331,7 @@ function saveSettings() {
     function pushCalendarsFromStorage(){
         try{ pushGcalToModules(); }catch(e){}
         try{ pushOutlookToModules(); }catch(e){}
-        try{ renderHomeTodayEvents(); }catch(e){}
+        try{ renderHomeTodayEvents(); }catch(e){} try{ renderHomeUpcoming2Weeks(); }catch(e){}
     }
 
     // Outlook CRUD
@@ -1764,7 +1803,7 @@ function updateModuleVisibility() {
             const card = document.querySelector('.module-card[data-m="' + m + '"]');
             if (card) card.classList.toggle('card-hidden', !visible);
             if (!visible && currentModule === m) goHome();
-    try{ renderHomeTodayEvents(); }catch(e){}
+    try{ renderHomeTodayEvents(); }catch(e){} try{ renderHomeUpcoming2Weeks(); }catch(e){}
         });
         updateHomeGrid();
     }
@@ -1862,7 +1901,7 @@ function updateModuleVisibility() {
         document.querySelectorAll('.module-card').forEach(el => el.classList.remove('active'));
         document.querySelectorAll('.module-frame').forEach(f => f.classList.remove('active'));
         document.getElementById('welcome').classList.remove('hidden');
-        try{ renderHomeTodayEvents(); }catch(e){}
+        try{ renderHomeTodayEvents(); }catch(e){} try{ renderHomeUpcoming2Weeks(); }catch(e){}
         document.title = 'PILOTE — Suite de Direction';
     }
 
@@ -1896,6 +1935,66 @@ function updateModuleVisibility() {
             return;
         }
 
+
+    function renderHomeUpcoming2Weeks(){
+        var grid = document.getElementById('homeUpcomingGrid');
+        var empty = document.getElementById('homeUpcomingEmpty');
+        if(!grid || !empty) return;
+
+        var all = getMasterAllCalendarEvents();
+        var start = _todayIso();
+        var startDate = new Date(start+'T00:00:00');
+        var endDate = new Date(startDate.getTime() + 13*24*3600*1000); // 14 jours (J0..J13)
+
+        // keep events within window
+        var windowEvs = all.filter(function(e){
+            if(!e.date) return false;
+            var d = new Date(e.date+'T00:00:00');
+            return d >= startDate && d <= endDate;
+        });
+
+        // group by calendar name
+        var groups = {};
+        windowEvs.forEach(function(e){
+            var k = (e.calName||'Agenda').trim();
+            if(!groups[k]) groups[k] = {name:k, color:e.color||'#94a3b8', events:[]};
+            groups[k].events.push(e);
+            // keep a stable color (first non-empty)
+            if(groups[k].color === '#94a3b8' && e.color) groups[k].color = e.color;
+        });
+
+        var cals = Object.keys(groups).sort(function(a,b){ return a.localeCompare(b); }).map(function(k){
+            groups[k].events.sort(function(a,b){
+                return (a.date+' '+(a.time||'99:99')).localeCompare(b.date+' '+(b.time||'99:99'));
+            });
+            return groups[k];
+        });
+
+        if(!cals.length){
+            grid.innerHTML = '';
+            empty.style.display = 'block';
+            empty.innerHTML = 'Aucun événement dans les 14 prochains jours. (Pense à synchroniser Google/Outlook si besoin.)';
+            return;
+        }
+
+        empty.style.display = 'none';
+        grid.innerHTML = cals.map(function(cal){
+            var rows = cal.events.slice(0, 30).map(function(e){
+                var when = (e.time ? (e.time + (e.endTime ? '–'+e.endTime : '')) : 'Journée')
+                         + '<div style="font-weight:700;color:#64748b;font-size:.70rem;margin-top:1px">'+ escHtml(_fmtFRDate(e.date)) +'</div>';
+                return '<div class="home-calev">'
+                    + '<div class="when">'+ when +'</div>'
+                    + '<div class="meta"><div class="t">'+ escHtml(e.title||'(sans titre)') +'</div><div class="s">'+ escHtml(cal.name) +'</div></div>'
+                    + '</div>';
+            }).join('');
+            return '<div class="home-calcard">'
+                + '<h4><span class="dot" style="background:'+ (cal.color||'#94a3b8') +'"></span>'+ escHtml(cal.name) +'</h4>'
+                + rows
+                + '</div>';
+        }).join('');
+    }
+
+
         box.innerHTML = evs.map(function(e){
             var time = e.time ? (e.time + (e.endTime ? '–'+e.endTime : '')) : 'Journée';
             return '<div class="home-ev">'
@@ -1912,7 +2011,7 @@ function updateModuleVisibility() {
         if (s.gcalEnabled) { try { gcalFetchEvents(); } catch(e) {} }
         if (s.outlookEnabled) { try { outlookFetchEvents(); } catch(e) {} }
         // Refresh view shortly after (even if sync fails, no harm)
-        setTimeout(renderHomeTodayEvents, 1200);
+        setTimeout(function(){ renderHomeTodayEvents(); renderHomeUpcoming2Weeks(); }, 1200);
     }
 
 
