--- a/CADIR_DHG_FUSION_b.html
+++ b/CADIR_DHG_FUSION_b.html
@@ -215,6 +215,9 @@
         .content-area { flex:1; position:relative; overflow:hidden; }
         .welcome { position:absolute; inset:0; display:flex; flex-direction:column; align-items:center; justify-content:flex-start; background:linear-gradient(160deg,#f0f1f4,#e4e7ee,#dfe2ea); z-index:10; transition:opacity 0.4s,transform 0.4s; padding:24px 16px 120px; overflow:auto; }
         .welcome.hidden { opacity:0; transform:scale(0.98); pointer-events:none; }
+        .welcome.welcome-center { justify-content:center; padding-top:24px; }
+        .welcome.welcome-center .welcome-header { margin-bottom:0; }
+        .welcome.welcome-center #homeEvents { display:none !important; }
         .welcome-header { text-align:center; margin-bottom:40px; }
         .welcome-logo { width:auto; height:auto; min-height:56px; background:var(--c-accent); border-radius:14px; display:flex; align-items:center; justify-content:center; font-size:24px; color:white; font-weight:700; margin:0 auto 16px; box-shadow:0 8px 32px var(--c-accent-glow); overflow:hidden; }
         .welcome-logo img { height:4cm; width:auto; object-fit:contain; }
@@ -2015,7 +2018,13 @@ function loadModule(name) {
     updateClock(); setInterval(updateClock, 30000);
 
 
-    function _todayIso(){ return new Date().toISOString().split('T')[0]; }
+    function _todayIso(){
+        var d = new Date();
+        var y = d.getFullYear();
+        var m = String(d.getMonth()+1).padStart(2,'0');
+        var day = String(d.getDate()).padStart(2,'0');
+        return y+'-'+m+'-'+day;
+    }
     function _fmtFRDate(iso){ try{ var d=new Date(iso+'T00:00:00'); return d.toLocaleDateString('fr-FR',{weekday:'short',day:'2-digit',month:'short'}); }catch(e){ return iso; } }
     function _safeTime(t){ return (t||'').substring(0,5); }
 
@@ -2060,24 +2069,43 @@ function loadModule(name) {
     }
 
     function renderHomeTodayEvents(){
+    var wrap = document.getElementById('homeEvents');
     var box = document.getElementById('homeEventsBody');
+    var welcome = document.getElementById('welcome');
     if(!box) return;
 
-    var today = _todayIso();
-    var evs = getMasterAllCalendarEvents().filter(function(e){ return e.date === today; });
-    evs.sort(function(a,b){ return (a.time||'99:99').localeCompare(b.time||'99:99'); });
+    var today = _todayIso(); // date locale (pas UTC)
+    var evs = getMasterAllCalendarEvents().filter(function(e){
+        // Robustesse : certains events peuvent ne pas avoir e.date mais une date ISO dans start
+        var d = e.date || (e.start ? String(e.start).slice(0,10) : '');
+        return d === today;
+    });
+
+    evs.sort(function(a,b){
+        var ta = a.time || (a.start ? String(a.start).slice(11,16) : '') || '99:99';
+        var tb = b.time || (b.start ? String(b.start).slice(11,16) : '') || '99:99';
+        return ta.localeCompare(tb);
+    });
 
     if(!evs.length){
-        box.innerHTML = '<div class="home-ev-empty">Aucun événement aujourd\'hui. <span style="font-weight:800;color:#94a3b8">Si besoin, synchronise tes agendas (bouton Sync).</span></div>';
+        // Pas d'événement : on centre le logo verticalement et on masque le bloc événements
+        if (wrap) wrap.style.display = 'none';
+        if (welcome) welcome.classList.add('welcome-center');
+        box.innerHTML = '';
         return;
     }
 
+    if (wrap) wrap.style.display = '';
+    if (welcome) welcome.classList.remove('welcome-center');
+
     box.innerHTML = evs.map(function(e){
-        var time = e.time ? (e.time + (e.endTime ? '–'+e.endTime : '')) : 'Journée';
+        var st = e.time || (e.start ? String(e.start).slice(11,16) : '');
+        var en = e.endTime || (e.end ? String(e.end).slice(11,16) : '');
+        var time = st ? (st + (en ? '–'+en : '')) : 'Journée';
         return '<div class="home-ev">'
             + '<span class="home-ev-dot" style="background:'+ (e.color||'#999') +'"></span>'
-            + '<div class="home-ev-when"><div class="home-ev-time">'+ escHtml(time) +'</div><div class="home-ev-date">'+ escHtml(_fmtFRDate(e.date)) +'</div></div>'
-            + '<div style="flex:1;min-width:0"><div class="home-ev-title">'+ escHtml(e.title||'(sans titre)') +'</div><div class="home-ev-cal">'+ escHtml(e.calName||'Agenda') +'</div></div>'
+            + '<div class="home-ev-when"><div class="home-ev-time">'+ escHtml(time) +'</div><div class="home-ev-date">'+ escHtml(_fmtFRDate(today)) +'</div></div>'
+            + '<div style="flex:1;min-width:0"><div class="home-ev-title">'+ escHtml(e.title||'(sans titre)') +'</div></div>'
             + '</div>';
     }).join('');
 }
